<resources>
    <string name="app_name">디씨 알라미</string>
    <string name="notification_content">새로운 개시글 감시 하는 중...</string>

    <string name="add_gallery_title">새 갤러리 추가</string>
    <string name="add_gallery_from_uuid">ID 값으로 추가</string>
    <string name="add_gallery_from_web">브라우저로 찾기</string>

    <string name="settings_title">설정</string>
    <string name="settings_keyword">키워드 관리</string>
    <string name="settings_gallery">갤러리 관리</string>

    <string name="service_setup_title">서비스 설정</string>
    <string name="service_check_delay">검사 주기 (초)</string>
    <string name="service_delay_info">전체 검사 테스크를 완수한 후 대기 할 시간이므로, 값보다 더 오래 지연 될 수 있습니다.</string>
    <string name="service_use_lte">데이터에서 작동</string>
    <string name="service_check_delay_hint">시간 입력</string>

    <string name="notified_alarm_title">알림 기록</string>
    <string name="notified_alarm_view">기록 보기</string>
    <string name="notified_alarm_clear">기록 초기화</string>
    <string name="notified_alarm_clear_check">기록을 모두 초기화 할까요?</string>
    <string name="notified_alarm_clear_ok">초기화 되었습니다.</string>

    <string name="notified_alarm_activity_title">장치로 발송된 알림</string>

    <string name="keyword_title">알림 키워드 관리</string>
    <string name="keyword_editor_hint">추가할 키워드를 입력</string>
    <string name="keyword_empty">키워드를 입력해주세요.</string>
    <string name="keyword_delete_q">이 키워드를 삭제할까요?</string>
    <string name="keyword_exsit">이미 등록된 키워드 입니다.</string>

    <string name="add_gallery_from_uuid_ex">예) bang_dream</string>
    <string name="add_gallery_from_uuid_content">예) https://gall.dcinside.com/mgallery/board/lists/?id=bang_dream 갤러리 주소에서 id 인자값을 입력하세요.</string>
    <string name="is_miner_gallery">마이너 갤러리 입니다.</string>

    <string name="execute_isvalid">유효성 검사 중...</string>
    <string name="execute_is_unvalid">유효하지 않은 갤러리 입니다.\n개시글이 있는지, 마이너 갤러리인지 다시 확인하세요.</string>
    <string name="execute_isvalid_err">유효성 검사 오류</string>
    <string name="execute_unvalid_err">유효하지 않은 갤러리 입니다.\n다시 시도하거나 다른 갤러리를 선택하세요.</string>
    <string name="targeted_gallery">이미 등록된 갤러리 입니다.</string>

    <string name="execute_succ">갤러리가 등록되었습니다.</string>

    <string name="gallery_list_activity_title">등록된 갤러리 리스트</string>
    <string name="gallery_list_delete_q">이 갤러리를 삭제할까요?</string>
    <string name="delete_positive">삭제</string>
    <string name="clear_ok">키워드를 모두 삭제할까요?</string>

    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>

    <string name="gallery_default_url">http://gall.dcinside.com/mgallery/board/lists/?id=</string>
</resources>
