<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.GalleryIDActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:id="@+id/main_title_add_gallery"
        android:text="@string/add_gallery_from_uuid"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/main_title_add_gallery_hr"
        android:background="@color/colorDarkWhite"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/main_title_add_gallery"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/add_gallery_ideditor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_title_add_gallery_hr"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:maxLines="1"
        android:hint="@string/add_gallery_from_uuid_ex" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/isMGallery"
        android:text="@string/is_miner_gallery"
        app:layout_constraintTop_toBottomOf="@id/add_gallery_ideditor"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_gallery_from_uuid_content"
        app:layout_constraintTop_toBottomOf="@id/isMGallery"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorDarkWhite"/>

    <Button
        android:id="@+id/add_gallery_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="36dp"
        android:background="@color/colorBlue"
        android:textColor="@color/colorWhite"
        android:paddingStart="64dp"
        android:paddingEnd="64dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>