<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.KeywordActivity">
    <TextView
        android:id="@+id/keyword_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keyword_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"/>

    <ListView
        android:id="@+id/keyword_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/keyword_list_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/keyword_add_container"
        android:layout_margin="16dp" />

    <LinearLayout
        android:id="@+id/keyword_add_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/keyword_editor"
            android:hint="@string/keyword_editor_hint"
            android:layout_weight="1" />
        <Button
            android:id="@+id/keyword_add_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/colorBlue"
            android:text="@string/save"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>